fix Jquery